--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.0",
+    "css-loader": "^0.28.11",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^5.0.0-beta.3",
     "redux": "^3.7.2",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "style-loader": "^0.20.3"
   }
 }
