--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
     "css-loader": "^0.28.11",
+    "dotenv-webpack": "^1.5.5",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "react": "^16.3.1",
