--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Bastian Pfeiffer",
   "license": "UNLICENSED",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.0",
     "css-loader": "^0.28.11",
     "dotenv-webpack": "^1.5.5",
@@ -32,6 +31,8 @@
     "reactstrap": "^5.0.0-beta.3",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
-    "style-loader": "^0.20.3"
-  }
+    "style-loader": "^0.20.3",
+    "webpack": "^4.6.0"
+  },
+  "private": true
 }
