--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bastian Pfeiffer",
@@ -24,6 +25,7 @@
     "dotenv-webpack": "^1.5.5",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "path": "^0.12.7",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
