--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "author": "Bastian Pfeiffer",
   "license": "UNLICENSED",
@@ -22,7 +23,6 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.0",
     "css-loader": "^0.28.11",
-    "dotenv-webpack": "^1.5.5",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "path": "^0.12.7",
@@ -30,6 +30,7 @@
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.1.4",
     "reactstrap": "^5.0.0-beta.3",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
