--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.0",
+    "core-js": "^2.5.6",
     "css-loader": "^0.28.11",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
